src/test/deca/context/invalid/created/object/equals_A_float.deca
// Description :
//    test equals entre un A et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
A a;
float b;
int c = a.equal(b);
}
